@@ -2,8 +2,8 @@ Package: ecospace
 Type: Package
 Title: Simulating Community Assembly and Ecological Diversification Using
     Ecospace Frameworks
-Version: 1.2.4
-Date: 2018-01-18
+Version: 1.3.1
+Date: 2018-02-05
 Depends:
     R (>= 3.4.0)
 Imports:
